@@ -10,6 +10,9 @@ endif
 
 head2data_SOURCES = head2data.cc head2data.test
 
+head2data_LDADD = \
+        ../../files/libu7file.la
+
 head2data.test: ../bgintrinsics.h ../siintrinsics.h
 	head2data data/u7bgintrinsics.data data/u7siintrinsics.data
 
